# yobot_remix

./: .gitignore  README.md  pyproject.toml
docs/v3/: ver.json
src/client/: main.py  nonebot_plugin.py  requirements.txt  yobot.py
src/client/packedfiles/: default_BossIdAndName.json  default_boss.json  default_config.json  default_pool.json
src/client/public/libs/github-markdown-css@3.0.1/: github-markdown.css
src/client/public/libs/yocool@final/princessadventure/: jquery.sliderBar.js  scheme-01.css  scheme-02.css  scheme-03.css  style.css  yocool.js
src/client/public/static/: gacha.js  password.js
src/client/public/static/admin/: pool-setting.js  users.js
src/client/public/static/clan/: clan-rank.js  panel.js  progress.js  subscribers.js  user.js
src/client/public/static/clan/statistics/: statistics2.js
src/client/public/template/: 404.html  about.html  help.html  homepage.html  login-code.html  login.html  manual.html  marionette.html  password.html  unauthorized.html  user-info.html  user.html
src/client/public/template/admin/: groups.html  setting.html  users.html
src/client/public/template/clan/: clan-rank.html  panel.html  progress.html  setting.html  statistics.html  subscribers.html  unauthorized.html  user.html
src/client/public/template/clan/statistics/: statistics1.html  statistics2.html
src/client/ybplugins/: add_record.py  custom.py  dbconfig_example.py  group_leave.py  homepage.py  marionette.py  settings.py  switcher.py  ybdata.py  yobot_exceptions.py  yobot_msg.py
src/client/ybplugins/clan_battle/: battle.py  exception.py  typing.py  util.py
src/client/ybplugins/clan_battle/components/: define.py  handler.py  kernel.py  multi_cq_utils.py  realize.py  score.py  web_operation.py
