[tool.poetry]
name = "yobot-remix"
version = "0.1.0"
description = "yobot"
authors = ["Iona <724207289@qq.com>"]
readme = "README.md"
packages = [{ include = "yobot_remix" }]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = 'default'

[tool.poetry.dependencies]
python = "^3.9"

aiocqhttp = "1.4.3"
aiohttp = "3.7.4"
apscheduler = "3.7.0"
expiringdict = "1.2.1"
jinja2 = "3.1.2"
nonebot = "1.9.1"
peewee = "3.14.1"
pillow = "9.4.0"
quart = "0.18.3"
requests = "2.25.1"
tzlocal = "2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
