[tool.poetry]
name = "yobot-remix"
version = "0.1.0"
description = "yobot"
authors = ["Iona <724207289@qq.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = 'default'

[tool.poetry.dependencies]
python = "^3.8"
aiocqhttp = "^1.4.4"
aiohttp = "^3.9.1"
apscheduler = "^3.10.4"
expiringdict = "^1.2.2"
jinja2 = "^3.1.2"
nonebot = "^1.9.1"
peewee = "^3.17.0"
pillow = "^10.1.0"
quart = "^0.18.4"
requests = "^2.31.0"
tzlocal = "^5.2"
werkzeug = "^2.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
