[project]
name = "yobot-remix"
version = "0.1.0"
description = "yobot"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "apscheduler<3.11.0",
    "expiringdict>=1.2.2",
    "nonebot>=1.9.1",
    "peewee>=3.17.8",
    "pillow>=10.4.0",
    "requests>=2.32.3",
    "werkzeug<3.0.0",
]

[project.scripts]
yobot = "client.main:run"

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true

[tool.poetry]
packages = [{ include = "client", from = "src"}]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = 'primary'
